--- a/css/parent-theme-modifications-default.css
+++ b/css/parent-theme-modifications-default.css
@@ -22,7 +22,6 @@ input[type="button"], input[type="reset"], input[type="submit"] {
 /* Style website header area */
 header#site-header {
 	background-color:transparent; /* Remove background color on the site header added by the Twentytwenty theme. */
-	position: relative; /* We have to position this element, so that we can make the site header image within use absolute positioning */
 }
 
 /* Style website header image */
@@ -53,8 +52,6 @@ div.site-description {
 main#site-content {
 	padding-top: 2em;
 	background-color: white;
-	position: relative; /* it has to be positioned, so that we can set a z-index */
-	z-index: 2; /* we have to set a z-index, so that it will overlap the site header image */
 }
 
 /* Set font for main content area and sidebars */
